alterações em css

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;1,400&display=swap');
+@import url('https://fonts.googleapis.com/2?family=Poppins:ital,wght@0,200;0,300;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
 
 * {
@@ -11,7 +11,7 @@
 
 body {
     background-color: #000;
-    max-width: 1200px;
+    max-width: 1100px;
     margin: 0 auto;
 
 }
