--- a/style.css
+++ b/style.css
@@ -156,7 +156,8 @@ main {
 main .sobre {
     margin-top: 60px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;     /* tag 1fr divide em três colunas o portifólio */
+ 
     gap: 30px;
     justify-content: center;
     padding: 40px;
@@ -362,7 +363,7 @@ main .sobre {
 
 .my_services ul {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap;        /* site se ajusta conforme o tamanho da janela  */
     gap: 20px;
     align-items: center;
     justify-content: center;
@@ -446,7 +447,7 @@ main .sobre {
     color: #f7f7f7;
 }
 
-.resume_gerenico {
+.resume_gerenico {                   /* centralizando  */
     padding: 30px;
     display: grid;
     justify-content: center;
@@ -460,12 +461,12 @@ main .sobre {
     font-size: 1.5rem;
     background-color: #ff5d56;
     justify-self: start;
-    padding: 10px;
+    padding: 10px;                   /* espaçamento entre linha  */
     border-radius: 1px;
 }
 
 .resume_gerenico h2 i {
-    margin-right: 10px;
+    margin-right: 10px;                 /* espaçamento entre letras  */
 }
 
 .experience {
